[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/MizFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://World/background_patty (1).png" type="Texture" id=2]
[ext_resource path="res://Scenes/MizTheme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/WinScreen.gd" type="Script" id=4]

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.5
margin_right = 91.5
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Title"]
margin_left = 71.0
margin_top = 2.0
margin_right = 111.0
margin_bottom = 73.0

[node name="Control" type="Control" parent="Title/VBoxContainer"]
margin_right = 40.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title/VBoxContainer"]
margin_top = 29.0
margin_right = 40.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_outline_modulate = Color( 0.290196, 0.0862745, 0.0862745, 1 )
custom_colors/font_color_shadow = Color( 0.0666667, 0.0627451, 0.101961, 1 )
text = "DIED"
align = 1
uppercase = true

[node name="Label2" type="Label" parent="Title/VBoxContainer"]
margin_top = 52.0
margin_right = 40.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_outline_modulate = Color( 0.290196, 0.0862745, 0.0862745, 1 )
custom_colors/font_color_shadow = Color( 0.0666667, 0.0627451, 0.101961, 1 )
text = "DIED"
align = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -56.0
margin_right = 62.5
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 2.0
margin_top = 19.0
margin_right = 122.0
margin_bottom = 92.0

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 120.0
margin_bottom = 49.0
rect_min_size = Vector2( 120, 20 )
text = "PLAY     AGAIN"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 120.0
margin_bottom = 73.0
rect_min_size = Vector2( 120, 20 )
text = "QUIT"

[node name="Me" type="CenterContainer" parent="."]
margin_right = 123.0
margin_bottom = 19.0
rect_scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Me"]
margin_right = 166.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.309804, 0.239216, 0.658824, 1 )
custom_colors/font_outline_modulate = Color( 0.290196, 0.0862745, 0.0862745, 1 )
custom_colors/font_color_shadow = Color( 0.0666667, 0.0627451, 0.101961, 1 )
text = "Made   by.   Nathan   Bell

"
align = 3
uppercase = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
